# EdgeFL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  getting_started.md  index.md  use_cases.md
docs/docs/: ClientNode.md
docs/docs/modules/: agent_coordinator.md  data_generator.md  federated_server.md
docs/examples/: index.md  mas_churn_coordination.md  pytorch_adaptation.md  urban_sensor_network.md
edgefl/: __init__.py
edgefl/agents/: __init__.py  agent.py  coordinator.py  policies.py
edgefl/data/: __init__.py  dataset.py  generator.py
edgefl/data/profiles/: urban_winter.yaml
edgefl/environment/: __init__.py  events.py  scenarios.py
edgefl/metrics/: __init__.py
edgefl/models/: __init__.py  base_model.py
edgefl/models/sklearn/: __init__.py  linear_model.py  random_forest_model.py
edgefl/models/torch/: __init__.py  adapter.py  linear_model.py
edgefl/nodes/: __init__.py  client.py
edgefl/server/: __init__.py  fedavg.py
edgefl/simulation/: __init__.py  simulation.py
edgefl/utils/: __init__.py  serialization.py
examples/: 01_simulation_basic.ipynb  agentfl_quickstart.py
tests/: test_agents.py  test_data_generation.py  test_environment_events.py  test_federated_server.py  test_metrics.py  test_models_interface.py
